--- a/src/css/config.css
+++ b/src/css/config.css
@@ -7,4 +7,12 @@ body {
   margin: 0;
   color: rgb(0, 0, 0);
   background: radial-gradient(circle, rgba(255,255,255,1) 10%, rgba(240,240,240,1) 50%, rgba(244,244,244,1) 90%);
+  height: 100vh; 
 }
+
+/* *Breakpoints used*
+      - Mobile - From 768px to cero (Has middel breakpoint 576px)
+      - Tablet - From 991px to 769px -> Min-width: 769px
+      - Desktop - From 1199px to 992px -> Min-width: 992px
+      - Large devices - From infinite to 1200px -> Min-width 1200px
+ */
