--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,2 +1,49 @@
+/* CSS configuration */
+@import 'config.css';
 
-@import 'config.css'
+.container {
+  margin: 0 10px 0 10px;
+}
+
+@media (min-width: 576px) {
+  .container {
+    width: 85%;
+    margin: 0 auto 0 auto;
+  }
+}
+
+@media (min-width: 769px) {
+  .container {
+    width: 75%;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 65%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 55%;
+  }
+}
+
+footer {
+  background-color: black;
+  height: 15rem;
+}
+
+footer .container {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+footer p {
+  color: white;
+  margin: 0;
+  font-weight: 600;
+  text-align: center;
+}
