--- a/src/css/config.css
+++ b/src/css/config.css
@@ -10,6 +10,26 @@ body {
   height: 100vh; 
 }
 
+h1 {
+  font-size: 1.375rem;
+}
+
+h2 {
+  font-size: 1.125rem;
+}
+
+p, span {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+img {
+  max-width: 100%;
+  width: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 /* *Breakpoints used*
       - Mobile - From 768px to cero (Has middel breakpoint 576px)
       - Tablet - From 991px to 769px -> Min-width: 769px
