--- a/src/css/config.css
+++ b/src/css/config.css
@@ -12,10 +12,19 @@ body {
 
 h1 {
   font-size: 1.375rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 h2 {
   font-size: 1.125rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 p, span {
