--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,12 @@
 /* CSS configuration */
 @import 'config.css';
+
+/* CSS Layout */
 @import 'layout.css';
 
 .entity-banner-section {
   position: relative;
+  margin-bottom: 3.125rem;
 }
 
 .entity-banner-section figure {
@@ -20,32 +23,70 @@
   padding: 0;
 }
 
-.entity-banner-section h1.banner-title {
+.entity-banner-section h1 {
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
   color: rgb(255, 255, 255);
   font-size: 1.8rem;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 2.8rem;
   text-align: left;
   margin: 0;
   padding: 0;
 }
 
+.entity-index-presentation-section {
+  margin-bottom: 50px;
+}
 
 .entity-card-section {
   margin-bottom: 50px;
 }
+
+.entity-card-section .container-card {
+  padding: 0;
+  width: 100%;
+}
+
+@media (min-width: 992px) {
+  .entity-card-section .container-card {
+    display: flex;
+    padding: 0 1rem;
+    width: 33%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .entity-card-section .container-card {
+    display: flex;
+    padding: 0 1rem;
+    width: 33%;
+  }
+}
+
 .entity-card-section .card {
   display: flex;
-  padding: 30px 15px 15px 15px;
+  flex-direction: column;
+  padding: 1rem;
   margin: 13px 0;
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
-  box-shadow: 10px 5px 5px black;
+  box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.2);
+  height: 200px;
 }
 
+@media (min-width: 992px) {
+  .entity-card-section .card {
+    height: 200px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .entity-card-section .card {
+    height: 250px;
+  }
+}
 
 footer {
   background-color: black;
