Card overlay, final mini presentation text, cards semi finalized

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -52,3 +52,7 @@ div[class~="dis-flex"] {
 .justify-space-around {
   justify-content: space-around;
 }
+
+.position-relative {
+  position: relative;
+}
