--- a/src/css/config.css
+++ b/src/css/config.css
@@ -35,8 +35,13 @@ p, span {
 img {
   max-width: 100%;
   width: 100%;
+  height: auto;
   object-fit: cover;
   display: block;
+}
+
+a {
+  color:brown;
 }
 
 /* *Breakpoints used*
