--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 @import 'layout.css';
 
 @import 'header.css';
+@import 'footer.css';
 
 .entity-banner-section {
   position: relative;
@@ -153,25 +154,6 @@
   color: white;
 }
 
-footer {
-  background-color: black;
-  height: 10rem;
-  margin-top: auto;
-}
-
-footer .container {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-footer p {
-  color: white;
-  margin: 0;
-  font-weight: 600;
-  text-align: center;
-}
-
 #dots {
   display: inline;
 }
@@ -189,4 +171,10 @@ i.active {
   width: 10px;
   height: 10px;
   content: url("../static/icons/angle-up-solid.svg");
+}
+
+@media (min-width: 992px) {
+  .entity-subsection {
+    width: 45%;
+  }
 }
