--- a/src/css/config.css
+++ b/src/css/config.css
@@ -30,6 +30,12 @@ h2 {
   margin-bottom: 1rem;
 }
 
+h3 {
+  font-size: 1rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
