--- a/src/css/config.css
+++ b/src/css/config.css
@@ -14,7 +14,7 @@ main {
   min-height: calc(100% - 18.125rem);
 }
 
-section {
+section, article {
   margin-bottom: 3.125rem;
 }
 
@@ -56,14 +56,19 @@ img {
 
 figure {
   width: 100%;
-  margin: 0;
+  margin: 20px auto 20px auto;
   text-align: center;
 }
 
+@media (min-width: 769px) {
+  figure {
+    max-width: 70%;
+  }
+}
 
 @media (min-width: 992px) {
   figure {
-    width: 40%;
+    max-width: 60%;
   }
 }
 
