--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,9 +15,9 @@
 }
 
 .entity-banner-section figure {
-  margin-top: 0;
-  margin-left: 0;
+  margin: 0;
   width: 100%;
+  max-width: 100%;
 }
 
 .entity-banner-section img {
