--- a/src/css/config.css
+++ b/src/css/config.css
@@ -58,6 +58,13 @@ figure {
   width: 100%;
   margin: 20px auto 20px auto;
   text-align: center;
+  align-self: center;
+}
+
+@media (min-width: 576px) {
+  figure {
+    max-width: 80%;
+  }
 }
 
 @media (min-width: 769px) {
@@ -69,6 +76,7 @@ figure {
 @media (min-width: 992px) {
   figure {
     max-width: 60%;
+    align-self: initial;
   }
 }
 
