--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -57,6 +57,10 @@ div[class~="dis-flex"] {
   justify-content: space-between;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .position-relative {
   position: relative;
 }
@@ -71,6 +75,18 @@ div[class~="dis-flex"] {
   margin-bottom: 50px;
 }
 
+.mb-25 {
+  margin-bottom: 25px;
+}
+
 .m-0 {
   margin: 0;
+}
+
+.mb-16 {
+  margin-bottom: 1rem;
+}
+
+.mt-16 {
+  margin-top: 1rem;
 }
