--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
-
+@import url('https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css');
 /* CSS configuration */
 @import 'config.css';
 
@@ -133,4 +133,22 @@ article .article__intro-image {
 
 .keen-slider__slide--grey-background {
   background-color: rgb(150, 147, 147);
+}
+
+
+.tns-nav {
+  margin-top: 10px;
+}
+.tns-nav > [aria-controls] {
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  margin: 0 5px;
+  border-radius: 50%;
+  background: rgb(153, 153, 153);
+  border: 0;
+}
+
+.tns-nav > .tns-nav-active {
+  background: rgb(160, 0, 0);
 }
