--- a/src/css/config.css
+++ b/src/css/config.css
@@ -11,7 +11,7 @@ body {
 }
 
 main {
-  min-height: calc(100% - 21.125rem);
+  min-height: calc(100% - 25.125rem);
 }
 
 section, article {
@@ -56,6 +56,7 @@ img {
   height: auto;
   object-fit: cover;
   display: block;
+  font-weight: 600;
 }
 
 figure {
