--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 header {
-  padding: 20px 0;
+  padding: 25px 0;
   height: auto;
   background-color: white;
   box-shadow: 0 5px 5px rgb(211 211 211 / 20%)
@@ -7,23 +7,34 @@ header {
 
 @media (min-width: 992px) {
   header {
-    height: 5rem;
+    height: 7rem;
   }
+}
+
+.logo-container {
+  width: 90px;
+  height: 60px;
+  margin: 0 auto;
 }
 
 .logo {
-  height: 40px;
-  width: 80px;
+  height: 60px;
+  width: 90px;
   object-fit: inherit;
-  margin: 0 auto 20px auto;
+  /* margin: 0 auto 0 auto; */
 }
 
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
   .logo {
-    margin: 0 0 20px 0;
+    margin: 0 0 0 0;
   }
-}
+} */
 
+.page-title {
+  font-weight: 700;
+  font-size: 1.375rem;
+  text-align: center;
+}
 
 nav ul {
   list-style: none;
