--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
 @import 'banner.css';
 @import 'breadcrumb.css';
 @import 'cards.css';
+@import 'animations.css';
 
 .entity-index-presentation-section {
   margin-bottom: 50px;
@@ -34,6 +35,10 @@ i.active::before {
   width: 10px;
   height: 10px;
   content: "\02C4";
+}
+
+.entity-subsection {
+  margin-bottom: 0;
 }
 
 @media (min-width: 992px) {
@@ -121,4 +126,22 @@ article .article__intro-image {
 
 .tns-nav > .tns-nav-active {
   background: rgb(160, 0, 0);
+}
+
+.svg-container {
+  width: 150px;
+  height: 120px;
+  margin: 0 auto 1rem auto;
+}
+
+.column-clip {
+  height: 400px;
+  clip-path: polygon(0% 17%, 2% 17%, 3% 20%, 6% 20%, 6% 22%, 7% 22%, 9% 26%,
+   9% 24%, 10% 24%, 10% 26%, 12% 26%, 12% 24%, 13% 24%, 13% 26%, 87% 26%, 87% 24%,
+   88% 24% , 88% 26%, 90% 26%, 90% 24%, 91% 24%, 91% 26%, 93% 22%, 94% 22%, 94% 20%,
+   97% 20%, 98% 17%, 100% 17%, 100% 83%, 98% 83%, 97% 80%, 94% 80%, 94% 78%, 93% 78%, 91% 74%,
+   91% 76%, 90% 76%, 90% 74%, 88% 74%, 88% 76%, 87% 76%, 87% 74%,
+   13% 74%, 13% 76%, 12% 76%, 12% 74%, 10% 74%, 10% 76%, 9% 76%, 9% 74%, 7% 78%, 6% 78%, 6% 80%,
+   3% 80%, 2% 83%, 0% 83% 
+  );
 }
