--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -138,8 +138,14 @@ article .article__intro-image {
   margin: 0 auto 1rem auto;
 }
 
+.img-responsive {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+}
+
 .column-clip {
-  height: 400px;
+  height: 500px;
   clip-path: polygon(0% 17%, 2% 17%, 3% 20%, 6% 20%, 6% 22%, 7% 22%, 9% 26%,
    9% 24%, 10% 24%, 10% 26%, 12% 26%, 12% 24%, 13% 24%, 13% 26%, 87% 26%, 87% 24%,
    88% 24% , 88% 26%, 90% 26%, 90% 24%, 91% 24%, 91% 26%, 93% 22%, 94% 22%, 94% 20%,
@@ -148,10 +154,66 @@ article .article__intro-image {
    13% 74%, 13% 76%, 12% 76%, 12% 74%, 10% 74%, 10% 76%, 9% 76%, 9% 74%, 7% 78%, 6% 78%, 6% 80%,
    3% 80%, 2% 83%, 0% 83% 
   );
+  top: -100px;
+  background-color:rgb(76, 75, 75);
 }
 
-.img-responsive {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
+
+.entity-last-added-article .article-added {
+  position: relative;
+}
+
+.entity-last-added-article img {
+  position: relative;
+  top: -70px;
+}
+
+.entity-last-added-article .article-added__body-text {
+  position: absolute;
+  top: calc(50% - 175px);
+  z-index: 1;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 15px;
+  background: rgba(76, 75, 75, 0.8);
+  width: calc(100% - 60px);
+}
+
+
+.entity-last-added-article .article-added__description {
+  z-index: 1;
+  color: white;
+  text-align: center;
+  opacity: 1;
+}
+
+.entity-last-added-article .article-added__description p {
+  font-weight: 600;
+}
+
+.entity-last-added-article .article-added .article-added__button {
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+  z-index: 2;
+  font-weight: 600;
+
+  padding: 10px 15px;
+  line-height: 12px;
+  bottom: 20px;
+  right: 20px;
+}
+
+.entity-last-added-article .article-added .article-added__button:hover {
+  background-color: rgb(160, 0, 0);
+  border: solid 4px white;
+}
+
+.entity-last-added-article a {
+  text-decoration: none;
+  color: black;
+}
+
+.entity-last-added-article a:hover {
+  background-color: rgb(160, 0, 0);
+  color: white;
 }
