--- a/src/css/config.css
+++ b/src/css/config.css
@@ -66,7 +66,14 @@ figure {
   align-self: center;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 417px) {
+  figure {
+    max-width: 75%;
+    align-self: initial;
+  }
+}
+
+/* @media (min-width: 576px) {
   figure {
     max-width: 489px;
   }
@@ -83,7 +90,7 @@ figure {
     max-width: 855px;
     align-self: initial;
   }
-}
+} */
 
 figcaption {
   background-color: rgb(100, 100, 100);
