--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap');
 @import url('../../node_modules/tiny-slider/dist/tiny-slider.css');
 
 /* CSS configuration */
@@ -13,6 +12,30 @@
 @import 'breadcrumb.css';
 @import 'cards.css';
 @import 'animations.css';
+
+@font-face {
+  font-family: 'Raleway';
+  font-weight: 400;
+  src: url('../fonts/Raleway-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-weight: 600;
+  src: url('../fonts/Raleway-SemiBold.ttf');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-weight: 700;
+  src: url('../fonts/Raleway-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-weight: 800;
+  src: url('../fonts/Raleway-ExtraBold.ttf');
+}
 
 .entity-index-presentation-section {
   margin-bottom: 50px;
