--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,24 +17,28 @@
   font-family: 'Raleway';
   font-weight: 400;
   src: url('../fonts/Raleway-Regular.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Raleway';
   font-weight: 600;
   src: url('../fonts/Raleway-SemiBold.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Raleway';
   font-weight: 700;
   src: url('../fonts/Raleway-Bold.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Raleway';
   font-weight: 800;
   src: url('../fonts/Raleway-ExtraBold.ttf');
+  font-display: swap;
 }
 
 .entity-index-presentation-section {
